[gd_scene load_steps=5 format=3 uid="uid://n7kdq8mfpr2w"]

[ext_resource type="FontFile" uid="uid://b8pvc0etwwo81" path="res://fonts/DeltaBlock-2Oee3.ttf" id="1_2hc6a"]
[ext_resource type="PackedScene" uid="uid://ddpbkvarml5rb" path="res://scenes_2d/b_button.tscn" id="2_urdxs"]
[ext_resource type="Script" path="res://scenes_2d/main_menus/scripts/menu_option.gd" id="2_uxpyv"]

[sub_resource type="LabelSettings" id="LabelSettings_q2jjt"]
font = ExtResource("1_2hc6a")
font_size = 28

[node name="MenuOption" type="Label"]
modulate = Color(1, 1, 1, 0.396078)
offset_left = -248.0
offset_right = 248.0
offset_bottom = 32.0
focus_mode = 2
mouse_filter = 1
text = "Continue"
label_settings = SubResource("LabelSettings_q2jjt")
horizontal_alignment = 1
script = ExtResource("2_uxpyv")
metadata/_edit_horizontal_guides_ = [32.0]
metadata/_edit_vertical_guides_ = [248.0]

[node name="BButton" parent="." instance=ExtResource("2_urdxs")]
visible = false
position = Vector2(472, 16)
scale = Vector2(0.65, 0.65)

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
